kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-app
  namespace: devops-project
spec:
  replicas: 3
  selector:
    matchLabels:
      app: devops-app
  template:
    metadata:      
      labels:
        app: devops-app
    spec:
      containers:
      - name: devops
        image: evgenijapopchan/devops-project:latest
        ports:
        - containerPort: 9990
        volumeMounts:
        - name: config-volume
          mountPath: /config
      volumes:
      - name: config-volume
        configMap:
          name: app-config
