kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-app-service
  namespace: devops-project
spec:
  selector:
    app: devops-app
  ports:
    - protocol: TCP
      port: 9990
      targetPort: 9990
