kubernetes/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-db
  namespace: devops-project
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: devops-db
